@@ -1200,7 +1200,7 @@ cl_hc08::inst_sthx(t_mem code, bool prefix)
     tick(1);
   }
   else
-    return(resHALT);
+    return(resINV_INST);
   
   store1(ea, regs.H);
   tick(1);
@@ -1273,7 +1273,7 @@ cl_hc08::inst_ldhx(t_mem code, bool prefix)
     tick(1);
   }
   else
-    return(resHALT);
+    return(resINV_INST);
   
   FLAG_CLEAR(BIT_V);
   FLAG_ASSIGN(BIT_N, regs.H & 0x80);
@@ -1316,7 +1316,7 @@ cl_hc08::inst_cphx(t_mem code, bool prefix)
     tick(1);
   }
   else
-    return(resHALT);
+    return(resINV_INST);
 
   hx = (regs.H << 8) | regs.X;
   result = hx-operand;
