@@ -1,6 +1,13 @@
+2013-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* sim/ucsim/st7.src/st7.cc,
+	* sim/ucsim/hc08.src/hc08.cc,
+	* sim/ucsim/hc08.src/inst.cc: Change result code for invalid and
+	  incomplete instructions so regression tests scripts detect problem.
+
 2013-07-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
-	* src/sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
+	* sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
 	  incomplete instructions so regression tests scripts detect problem.
 
 2013-07-13 Philipp Klaus Krause <pkk AT spth.de>
